# efa-bad-practice

./: .gitignore  CMakeLists.txt  README.md  communicator.cpp  communicator.h  demo_cli_bw.cpp  demo_msg_cli.cpp  demo_msg_serv.cpp  demo_nothd_cli.cpp  demo_nothd_serv.cpp  demo_serv_bw.cpp  efa_ep.cpp  efa_ep.h  efa_thd.cpp  efa_thd.h  helper_socket.cpp  helper_socket.h  shard_cli.cpp  shard_ctl.cpp  shard_serv.cpp  shard_util.hpp  shm_cli.cpp  shm_cli_comm.cpp  shm_common.h  shm_demo_cli.cpp  shm_demo_cli_veri.cpp  shm_demo_serv.cpp  shm_demo_serv_veri.cpp  shm_serv.cpp  shm_serv_comm.cpp  shm_worker.cpp  sock_bw.cpp  sock_cli_serv.cpp  sock_cli_serv.h  storage.cpp  storage.hpp  store_cli.cpp  store_serv.cpp  tcp.cpp  tcp.h  (+10 more)
scripts/: shm_launcher.py
